# vehicle_type_cls

./: .gitignore  README.md  classify_color_by_hsv.py  crop_obb_patches.py  data  pyproject.toml  vehicle_color_labeled.csv  vehicle_meta.csv
